--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "mm",
   "author": "Izan Lopez Seco",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "minecraft",
+    "mod",
+    "list"
   ],
   "scripts": {
     "dev": "gatsby develop",
@@ -15,16 +18,19 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "gatsby": "^3.13.0",
     "gatsby-plugin-gatsby-cloud": "^3.1.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-sass": "^4.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.41.0"
   }
 }
